# ccf-cell-generation

./: .gitignore  AS_number_per_organ.cpp  CMakeLists.txt  Presentation1.pptx  README.md  cell_generation.cpp  generate_cell_ctpop.cpp  generate_cell_skin.cpp  imperfect_mesh.cpp  main.cpp  merge.cpp  point_mesh.off  point_mesh_0.002.off  point_mesh_0.005.off  point_mesh_0.010.off  points.csv  random_generate_all_AS.cpp  run.sh  run_ctpop.sh  run_imperfect.sh  run_skin.sh  ~$Presentation1.pptx
Vicky/: dataset_with_exact_hubmap_id.csv  explore_h5ad.ipynb  finddesecendants.csv  findh5addesecendants.csv
all_csv_2/: HBM375.ZKZZ.765_new.csv  b4c3c03b-99cd-407a-a824-1875e00a04ad_D11_Heart_apex_of_heart.csv  b4c3c03b-99cd-407a-a824-1875e00a04ad_D11_Heart_heart_left_ventricle.csv  b4c3c03b-99cd-407a-a824-1875e00a04ad_D11_Heart_heart_right_ventricle.csv  b4c3c03b-99cd-407a-a824-1875e00a04ad_D11_Heart_interventricular_septum.csv  b4c3c03b-99cd-407a-a824-1875e00a04ad_D11_Heart_left_cardiac_atrium.csv  b4c3c03b-99cd-407a-a824-1875e00a04ad_D11_Heart_right_cardiac_atrium.csv  b4c3c03b-99cd-407a-a824-1875e00a04ad_D1_Heart_apex_of_heart.csv  b4c3c03b-99cd-407a-a824-1875e00a04ad_D1_Heart_heart_left_ventricle.csv  b4c3c03b-99cd-407a-a824-1875e00a04ad_D1_Heart_heart_right_ventricle.csv  b4c3c03b-99cd-407a-a824-1875e00a04ad_D1_Heart_left_cardiac_atrium.csv  b4c3c03b-99cd-407a-a824-1875e00a04ad_D2_Heart_apex_of_heart.csv  b4c3c03b-99cd-407a-a824-1875e00a04ad_D2_Heart_heart_left_ventricle.csv  b4c3c03b-99cd-407a-a824-1875e00a04ad_D2_Heart_heart_right_ventricle.csv  b4c3c03b-99cd-407a-a824-1875e00a04ad_D2_Heart_interventricular_septum.csv  b4c3c03b-99cd-407a-a824-1875e00a04ad_D2_Heart_left_cardiac_atrium.csv  b4c3c03b-99cd-407a-a824-1875e00a04ad_D2_Heart_right_cardiac_atrium.csv  b4c3c03b-99cd-407a-a824-1875e00a04ad_D3_Heart_apex_of_heart.csv  b4c3c03b-99cd-407a-a824-1875e00a04ad_D3_Heart_heart_left_ventricle.csv  b4c3c03b-99cd-407a-a824-1875e00a04ad_D3_Heart_heart_right_ventricle.csv  b4c3c03b-99cd-407a-a824-1875e00a04ad_D3_Heart_interventricular_septum.csv  b4c3c03b-99cd-407a-a824-1875e00a04ad_D3_Heart_left_cardiac_atrium.csv  (+61 more)
(+131 files in other folders)
